# librarian-base-v0

./: .gitignore  README.md  chat_librarian.py  dataset.py  model.py  pyproject.toml  start.bat  test.py  train.py
utills/: evaluate_tokenizer.py  getData.py  train_tokenizer.py
