[project]
name = "sujal-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.1",
    "bs4>=0.0.2",
    "datasets>=4.1.1",
    "huggingface-hub[hf-xet]>=0.35.1",
    "requests>=2.32.5",
    "tokenizer>=3.5.3",
    "tokenizers>=0.22.1",
    "torch>=2.8.0",
    "transformers>=4.56.2",
]
